[package]
name = "bz2_decompress"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bzip2 = { version = "0.4.4" }
error-chain = "0.12.4"
rayon = "1.7.0"
reqwest = { version = "0.11.18", features = ["blocking"] }
select = "0.6.0"
url = "2.4.0"
walkdir = "2.3.3"
